--- a/tex/main.tex
+++ b/tex/main.tex
@@ -25,14 +25,14 @@
 % !IMPORTANT!
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\thesisType}{Thesis} % replace with dissertation if it is a Dissertation
-\newcommand{\thesisTitle}{Your Title} % your thesis/dissertation title, e.g., How to Write A Thesis
-\newcommand{\yourName}{Your Name} % your name, e.g., Tim Cook
-\newcommand{\yourDegree}{Master of Science} % your degree to be obtained, e.g., Master of Science, Doctor of Philosophy
-\newcommand{\yourProgram}{Electrical and Computer Engineering} %insert your graduate program’s official name
+\newcommand{\thesisTitle}{RAPID:Application Quality and Resource Usage Trade-offs with Approximation} % your thesis/dissertation title, e.g., How to Write A Thesis
+\newcommand{\yourName}{Liu Liu} % your name, e.g., Tim Cook
+\newcommand{\yourDegree}{Doctor of Philosopy} % your degree to be obtained, e.g., Master of Science, Doctor of Philosophy
+\newcommand{\yourProgram}{Computer Science} %insert your graduate program’s official name
 \newcommand{\yourDirectorTitle}{Prof.} % the title of your thesis director
-\newcommand{\yourDirector}{Director Name} % your thesis director name here, his/her title not included
-\newcommand{\yourCommitteeNumber}{3} % IMPORTANT! the number of the committee members for your defense
-\newcommand{\yourMonth}{May} % your graduation month, not your defense month
+\newcommand{\yourDirector}{Ulrich Kremer} % your thesis director name here, his/her title not included
+\newcommand{\yourCommitteeNumber}{4} % IMPORTANT! the number of the committee members for your defense
+\newcommand{\yourMonth}{Oct} % your graduation month, not your defense month
 \newcommand{\yourYear}{2019} % your graduation year
 
 
@@ -99,10 +99,10 @@
 \setcounter{page}{3} % set the page number appropriately based on the number of intro pages
 \input{acknowledgements.tex}
 
-%\addtocontents{toc}{\cftpagenumbersoff{chapter}} 
+%\addtocontents{toc}{\cftpagenumbersoff{chapter}}
 
 %\currentpdfbookmark{Acknowledgments}{acknowledgments}
-%\addtocontents{toc}{\cftpagenumberson{chapter}} 
+%\addtocontents{toc}{\cftpagenumberson{chapter}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Table of Contents
@@ -176,7 +176,7 @@
 {\normalfont\bfseries\filcenter}{\MakeUppercase\chaptertitlename\ \thechapter}{0pt}{\MakeUppercase{#1}}  %spacing between titles
 \titlespacing*{\chapter}
   {0pt}{0pt}{30pt}	%controls vertical margins on title
-  
+
 % Adjust section title formatting
 \titleformat{\section}{\normalfont\bfseries}{\thesection}{1em}{#1}
 
@@ -230,7 +230,7 @@
 \addcontentsline{toc}{chapter}{References}  %add References section to Table of Contents
 
 %%%%%%%%%%%%%%%%
-% Vita 
+% Vita
 % Only for PhD students
 % Masters students remove this line
 %%%%%%%%%%%%%%%%
